--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "drizzle-orm": "^0.35.3",
     "geist": "^1.3.1",
     "lucide-react": "^0.379.0",
-    "next": "14.2.3",
+    "next": "^14.2.16",
     "nextjs-toploader": "^3.7.15",
     "react": "^18",
     "react-day-picker": "^8.10.1",
@@ -38,6 +38,7 @@
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^7.1.0",
+    "uuid": "^10.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -45,6 +46,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^10.0.0",
     "cross-env": "^7.0.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
