--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
     "drizzle-orm": "^0.35.3",
     "geist": "^1.3.1",
     "lucide-react": "^0.379.0",
+    "masonry-layout": "^4.2.2",
     "next": "^14.2.16",
     "nextjs-toploader": "^3.7.15",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
+    "react-masonry-css": "^1.0.16",
     "react-swipeable": "^7.0.2",
     "seedrandom": "^3.0.5",
     "sharp": "^0.33.5",
@@ -46,6 +48,7 @@
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.59.7",
+    "@types/masonry-layout": "^4.2.8",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
