--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.1.5",
+    "@react-email/components": "^0.0.33",
     "@tanstack/react-query": "^5.59.15",
     "@tanstack/react-query-devtools": "^5.59.15",
     "@vercel/postgres": "^0.10.0",
+    "axios": "^1.8.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -37,6 +39,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
     "react-swipeable": "^7.0.2",
+    "resend": "^4.1.2",
     "seedrandom": "^3.0.5",
     "sharp": "^0.33.5",
     "tailwind-merge": "^2.6.0",
@@ -58,6 +61,7 @@
     "postcss": "^8",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
+    "react-email": "3.0.7",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5"
