--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@vercel/postgres": "^0.10.0",
     "axios": "^1.8.2",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.6.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "drizzle-kit": "^0.26.2",
