--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tanstack/react-query-devtools": "^5.59.15",
     "@vercel/postgres": "^0.10.0",
     "axios": "^1.8.2",
+    "basic-ftp": "^5.0.5",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.6.0",
     "clsx": "^2.1.1",
@@ -35,6 +36,7 @@
     "lucide-react": "^0.379.0",
     "next": "^14.2.16",
     "nextjs-toploader": "^3.7.15",
+    "node-ssh": "^13.2.1",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
